nova_tests/negative_capability/selective_import_empty_rejected.nv
// EXPECT_COMPILE_ERROR selective-import list must contain at least one item
//
// Plan 35 sub-plan 35.A R26: `import X.{}` с пустым списком отвергается
// parser'ом (валидно только `.{Item1, ...}` или без `.{}` секции).

module negative_capability.selective_import_empty_rejected

import std.collections.range.{}

test "empty selective list rejected (negative)" {
    assert(true)
}
